--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -5,6 +5,7 @@
   align-items: center;
   gap: 16px;
   width: 100%;
+  margin-top: 40px;
   padding: 3rem 1rem;
   background-color: rgb(82, 5, 149, 0.7);
   background-image: url("https://bettysgraphics.neocities.org/images/backgrounds/275.GIF");
